# django.api

./: .flake8  .gitignore  README.md  docker-compose.yml  manage.py  pyproject.toml  pytest.ini
.github/workflows/: blank.yml
api_rest/: admin.py  models.py
api_rest/migrations/: 0001_initial.py  0002_user_is_admin_alter_usertasks_user_nickname.py
api_rot/: asgi.py  settings.py  urls.py  wsgi.py
api_rot/api_rest/: models.py  urls.py  views.py
api_rot/api_rest/migrations/: 0001_initial.py
api_rot/base/: admin.py
api_rot/base/migrations/: 0001_initial.py
api_rot/base/static/css/: style.css
api_rot/base/templates/base/: home.html
contrib/: env-sample
staticfiles/css/: style.css
