[tool.poetry]
name = "davidson"
version = "0.1.0"
description = ""
authors = ["Davidson <deivisonj1@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.1.3"
djangorestframework = "^3.15.2"
django-cors-headers = "^4.6.0"
flake8 = "^7.1.1"
pytest = "^8.3.3"
dj-database-url = "^2.3.0"
sentry-sdk = "^2.18.0"
python-decouple = "^3.8"
django-s3-folder-storage = "^0.5"
django-debug-toolbar = "^4.4.6"
psycopg2 = "^2.9.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
